// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`line break > expected 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<!--\\n  hello world\\n-->")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`line break > received 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<!--\\n  hello world\\n-->")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`simple comment > expected 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<!-- hello world -->")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`simple comment > received 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<!-- hello world -->")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;
